fix add song to show on mobile

--- a/src/assets/styles/cmps/AddSongs.scss
+++ b/src/assets/styles/cmps/AddSongs.scss
@@ -5,6 +5,7 @@ $placeholder-color: #9e9e9e;
   flex-direction: column;
   padding: 0.625em;
   width: 100%;
+  min-height: 400px;
   .song-result {
     display: flex;
     align-items: center;
